--- a/src/main/resources/css/login.css
+++ b/src/main/resources/css/login.css
@@ -11,3 +11,48 @@
     -fx-background-position: center center;
     -fx-background-repeat: stretch;
 }
+
+.login-card .login-title {
+    -fx-text-fill: rgb(20, 25, 25);
+}
+
+.login-card .login-input {
+    -fx-background-color: rgb(220, 225, 225);
+    -fx-font-size: 16px;
+    -fx-background-radius: 10px;
+    -fx-prompt-text-fill: rgb(150, 150, 150);
+    -fx-text-full: rgb(20, 20, 20);
+}
+
+.login-card .login-log-btn {
+    -fx-background-radius: 10px;
+    -fx-font-size: 16px;
+    -fx-text-fill: #F5F5F5;
+    -fx-background-color: #85AE51;
+}
+
+.login-card .login-log-btn:hover {
+    -fx-background-color: #98BB6D;
+}
+
+.login-card .login-log-btn:disabled {
+    -fx-background-color: rgb(150, 155, 155);
+    -fx-text-fill: rgb(80, 80, 80);
+}
+
+.login-card .login-separator {
+    -fx-border-color: #98BB6D;
+    -fx-border-width: 1 0 0 0 ;
+}
+
+.login-card .ms-login-btn {
+    -fx-background-color: rgb(230, 235, 235);
+}
+
+.login-card .ms-login-btn:hover {
+    -fx-background-color: rgb(220, 225, 225);
+}
+
+.login-with-label {
+    -fx-text-fill: rgb(20, 25, 25);
+}
